--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "indent-string": "^5.0.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.12.13"
   }
